--- a/.cproject
+++ b/.cproject
@@ -43,8 +43,8 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="TrivialTool" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="TrivialTool"/>
+						<entry excluding="ShiftCipher|TrivialTool" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="ShiftCipher"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -92,8 +92,8 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="TrivialTool" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="TrivialTool"/>
+						<entry excluding="ShiftCipher|TrivialTool" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="ShiftCipher"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
